GitHubHealth/app/static/css/main.css
body {
  background-color: #112;
  color: #eee;
  display: flex;
  flex-direction: column;
  height: 100vh;
  margin-left: 20px;
}

.light-mode {
  color: black;
  background-color: white;
}

table, th, td {
  border: 1px solid #C8C8C8;
  align-content: center;
}

div[id^="vis_user_"] {
  display: flex;
  justify-content: center;
}

table {
  border-collapse: collapse;
  text-align:left;
  padding: 10px;
  margin-left: 20px;
  margin-bottom: 20px;
  font-size: 0.9em;
  border-width: 2px;
  background-color: #15172b;
  width: 80%;
  align-items: center;
  justify-content: center;
}

a, a:visited, a:hover, a:active {
  color: inherit;
}

tr {
  margin-left:20px;
  padding: 20px;
}

table.dataframe, .dataframe th, .dataframe td {
  border-bottom: 1px solid #C8C8C8;
  border-collapse: collapse;
  text-align:left;
  padding: 10px;
  margin-bottom: 40px;
  font-size: 0.9em;
  border-width: 2px;
  background-color: #15172b;
}
.light-mode .form {
  color: black;
  background-color: white;
}

.form {
  background-color: #15172b;
  border-width: 2px;
  border-color: dimgray;
  border-radius: 20px;
  box-sizing: border-box;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  height: 80%;
  padding: 20px;
  margin-left: 20px;
  margin-right: 20px;
  width: 400px;
}

.form-group {
  background-color: #15172b;
  border-radius: 20px;
  box-sizing: border-box;
  flex-direction: row;
  align-items: center;
  margin: 15px;
  justify-content: center;
  height: 20px;
  padding: 10px;
  padding-left: 20px;
  padding-right: 20px;
  width: 90%;
}

.form-control-label {
  box-sizing: border-box;
  border-color: dimgray;
  border-width: 5px;
  width: 40%;
  padding-right: 10px;
  display: inline-block;
}

.form-control {
  color: dimgray;
  border-radius: 10px;
  justify-content: right;
  width: 40%;
  display: inline-block;
}

.btn-primary {
  align: left;
  align-text: center;
  font-size: 18px;
  border-radius: 10px;
  background-color: dimgray;
  margin: 15px;
  margin-left: 20px;
  width: 200px;
  height: 40px;
}

.invalid-feedback {
  font-size: 8px;
  color: Coral;
}

.title {
  color: #eee;
  font-family: sans-serif;
  font-size: 36px;
  font-weight: 600;
  margin-top: 30px;
}

.subtitle {
  color: #eee;
  font-family: sans-serif;
  font-size: 16px;
  font-weight: 600;
  margin-top: 10px;
}

.input-container {
  height: 50px;
  position: relative;
  width: 100%;
}

.ic1 {
  margin-top: 40px;
}

.ic2 {
  margin-top: 30px;
}

.input {
  background-color: #303245;
  border-radius: 12px;
  border: 0;
  box-sizing: border-box;
  color: #eee;
  font-size: 18px;
  height: 100%;
  outline: 0;
  padding: 4px 20px 0;
  width: 100%;
}

.cut {
  background-color: #15172b;
  border-radius: 10px;
  height: 20px;
  left: 20px;
  position: absolute;
  top: -20px;
  transform: translateY(0);
  transition: transform 200ms;
  width: 76px;
}

.cut-short {
  width: 50px;
}

.input:focus ~ .cut,
.input:not(:placeholder-shown) ~ .cut {
  transform: translateY(8px);
}

.placeholder {
  color: #65657b;
  font-family: sans-serif;
  left: 20px;
  line-height: 14px;
  pointer-events: none;
  position: absolute;
  transform-origin: 0 50%;
  transition: transform 200ms, color 200ms;
  top: 20px;
}

.input:focus ~ .placeholder,
.input:not(:placeholder-shown) ~ .placeholder {
  transform: translateY(-30px) translateX(10px) scale(0.75);
}

.input:not(:placeholder-shown) ~ .placeholder {
  color: #808097;
}

.input:focus ~ .placeholder {
  color: #dc2f55;
}

.submit {
  background-color: #08d;
  border-radius: 12px;
  border: 0;
  box-sizing: border-box;
  color: #eee;
  cursor: pointer;
  font-size: 18px;
  height: 50px;
  margin-top: 38px;
  // outline: 0;
  text-align: center;
  width: 100%;
}

.submit:active {
  background-color: #06b;
}

.header {
  white-space: nowrap;
  margin-left: 20px;
  font-size: 32px;
  vertical-align: bottom;
  margin-bottom: 10px;
  color: Gainsboro;
}

.quicklink {
  font-size: 16px;
}

.settings {
    width: 35px;
    height: 35px;
    align: right;
    margin: 5px;
    margin-top: 10px;
}

#footer {
  margin-left: 20px;
  font-size: 20px;
  vertical-align: top;
  margin-bottom: 10px;
  color: Gainsboro;
}

textarea.content {
    background: inherit;
    color: inherit;
    background-color: inherit;
    width: 80%;
    margin: 10px;
}

div#loading {
    width: 35px;
    height: 35px;
    display: none;
    background: url(/static/loadingimage.gif) no-repeat;
    cursor: wait;
}

/* Dropdown Button */
.dropbtn {
  background-color: #3498DB;
  color: white;
  padding: 16px;
  font-size: 16px;
  border: none;
  cursor: pointer;
}

/* Dropdown button on hover & focus */
.dropbtn:hover, .dropbtn:focus {
  background-color: #2980B9;
}

/* The container <div> - needed to position the dropdown content */
.dropdown {
  position: relative;
  display: inline-block;
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
  display: none;
  position: absolute;
  background-color: #f1f1f1;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
}

/* Links inside the dropdown */
.dropdown-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

/* Change color of dropdown links on hover */
.dropdown-content a:hover {background-color: #ddd}

/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
.show {display:block;}

